plugins {
    alias(libs.plugins.android.application)
    alias(libs.plugins.google.gms.google.services)
}

android {
    namespace = "com.example.exp1"
    compileSdk = 36

    buildFeatures {
        buildConfig = true
    }

    packaging {
        jniLibs { useLegacyPackaging = true }
        resources { excludes += "META-INF/DEPENDENCIES" }
    }

    defaultConfig {
        applicationId = "com.wajequailfarm.qa"
        minSdk = 24
        targetSdk = 36
        versionCode = 1
        versionName = "beta"
        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            isMinifyEnabled = false
            proguardFiles(
                getDefaultProguardFile("proguard-android-optimize.txt"),
                "proguard-rules.pro"
            )
        }
    }

    compileOptions {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    androidResources {
        noCompress += "onnx"
    }
}

dependencies {
    // Firebase BoM - Manages versions for Firebase libraries
    implementation(platform("com.google.firebase:firebase-bom:34.16.0"))

    // Firebase dependencies using version catalog
    implementation(libs.firebase.auth)
    implementation(libs.firebase.database)
    implementation(libs.firebase.firestore)
    implementation(libs.firebase.storage)

    // Other Firebase libraries
    implementation("com.google.firebase:firebase-ai")

    // Google Play Services & Other Libraries
    implementation("com.google.android.gms:play-services-auth:20.7.0")
    implementation("com.microsoft.onnxruntime:onnxruntime-android:1.17.3")

    // CameraX
    implementation("androidx.camera:camera-core:1.4.1")
    implementation("androidx.camera:camera-camera2:1.4.1")
    implementation("androidx.camera:camera-lifecycle:1.4.1")
    implementation("androidx.camera:camera-view:1.4.1")

    // AndroidX & UI
    implementation(libs.androidx.core.ktx)
    implementation(libs.androidx.appcompat)
    // ProcessLifecycleOwner — lets us detect when the *whole app* (not just
    // one Activity) leaves the foreground, so we can record an automatic
    // Logout when the user exits/closes the app without pressing Logout.
    implementation("androidx.lifecycle:lifecycle-process:2.8.7")
    implementation(libs.material)
    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
    implementation(libs.androidx.activity)
    implementation(libs.androidx.constraintlayout)
    implementation(libs.mpandroidchart)
    implementation(libs.androidx.credentials)
    implementation(libs.androidx.credentials.play.services.auth)
    implementation(libs.googleid)
    implementation(libs.glide)

    // Testing
    testImplementation(libs.junit)
    androidTestImplementation(libs.androidx.junit)
    androidTestImplementation(libs.androidx.espresso.core)
}
